--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         document.body.appendChild(modal.render());
         
         console.log('HTML: ' + modal.id);
-        openModalButton.setAttribute('data-target', modal.id);
+        openModalButton.setAttribute('data-target', '#' + modal.id);
 
     </script>
 </body>
