Abrindo modal ao carregar a página para facilitar visualização e teste

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         console.log('HTML: ' + modal.id);
         openModalButton.setAttribute('data-target', '#' + modal.id);
 
+        // Abrir modal ao carregar a página
+        $(document).ready(function(){
+            $('#' + modal.id).modal('show');
+        });
+
     </script>
 </body>
 </html>
