--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Botão para abrir o modal -->
     <div class="container" style="margin-top: 20px;">
         <button id="modalOpenButton" type="button" class="btn btn-primary" data-toggle="modal">
-            Abrir Modal
+            Abrir ou não
         </button>
     </div>
 
