--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Examples page</title>
+    <title>Dual List Example</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 
 <body>
-
-    <!-- Botão para abrir o modal -->
     <div class="container" style="margin-top: 20px;">
-        <button id="modalOpenButton" type="button" class="btn btn-primary" data-toggle="modal">
-            Abrir ou não
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#congelamentoModal">
+            Abrir Modal
         </button>
     </div>
 
@@ -28,17 +26,69 @@
     <script type="module">
         import { Modal } from './components/modal.js';
 
-        const modal = new Modal();
-        const openModalButton = document.getElementById('modalOpenButton');
+        // Configurar opções do dropdown
+        const dropdownOptions = [
+            { id: '2023/1', caption: '2023/1' },
+            { id: '2023/2', caption: '2023/2' },
+            { id: '2024/1', caption: '2024/1' },
+            { id: '2024/2', caption: '2024/2' },
+            { id: '2025/1', caption: '2025/1' }
+        ];
 
-        document.body.appendChild(modal.render());
+        // Configurar itens da lista de origem
+        const sourceItems = [
+            { id: '8', caption: 'Panorama' },
+            { id: '40', caption: 'Foco Agronegócios' },
+            { id: '55', caption: 'Global' },
+            { id: '63', caption: 'Agrícola Estrela' },
+            { id: '110', caption: 'Juparanã' },
+            { id: '1010', caption: 'Coopertradição' },
+            { id: '1018', caption: 'Coprossel' },
+            { id: '1019', caption: 'Coperboa' },
+            { id: '1040', caption: 'Camisc' },
+            { id: '1058', caption: 'Coperdia' },
+            { id: '1061', caption: 'Cooperplan' },
+            { id: '5002', caption: 'Sementes Maua' },
+            { id: '5001', caption: 'Bela Sementes' },
+            { id: '5003', caption: 'Sementes Agrosol' },
+            { id: '5004', caption: 'Sementes Costa Beber' },
+            { id: '5006', caption: 'Sementes Petrovina' },
+            { id: '5007', caption: 'SEMENTES TRIUNFO' },
+            { id: '5008', caption: 'SEMENTES TALISMA' },
+            { id: '5010', caption: 'Sementes Butiá' },
+            { id: '5011', caption: 'Sementes Giovelli' },
+            { id: '5012', caption: 'Sementes Lagoa Bonita' },
+            { id: '5013', caption: 'Cerrado de Cima' },
+            { id: '5015', caption: 'BJ SEMENTES' },
+            { id: '5016', caption: 'Sementes Valiosa' },
+            { id: '5018', caption: 'Agro Rosso' },
+            { id: '5020', caption: 'Cereal Ouro' },
+            { id: '5057', caption: 'SEMENTES ELIANE' },
+            { id: '5073', caption: 'SEMENTES TROPICAL' },
+            { id: '5082', caption: 'CALUBA SEMENTES' },
+            { id: '5107', caption: 'SEMENTES MANA' },
+            { id: '5114', caption: 'CANASSA' }
+        ];
 
-        openModalButton.setAttribute('data-target', '#' + modal.id);
-
-        $(document).ready(function () {
-            $('#' + modal.id).modal('show');
+        // Criar instância do modal com todas as customizações
+        const modal = new Modal({
+            id: 'congelamentoModal',
+            title: 'Congelamento RCA SeedCare',
+            dropdownDescription: 'Período do congelamento',
+            dropdownOptions: dropdownOptions,
+            searchPlaceholder: 'Filtrar sementeiros',
+            sourceListTitle: 'Sementeiros disponíveis',
+            targetListTitle: 'Sementeiros selecionados',
+            sourceItems: sourceItems,
+            itemsPerPage: 10,
+            onConfirm: (selectedItems, selectedContext) => {
+                console.log('Itens selecionados:', selectedItems);
+                console.log('Período selecionado:', selectedContext);
+            }
         });
 
+        // Adicionar o modal ao DOM
+        document.body.appendChild(modal.render());
     </script>
 </body>
 
